--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,7 +6,7 @@
   {{ partial "header.html" . }}
   <div class="content-list">
   {{ range .Data.Pages.GroupByDate "2006" }}
-  <div class="content-list-date start">{{ .Key }}</div>
+  <div class="content-list-date">{{ .Key }}</div>
     {{ range .Pages }}
     {{ .Render "li"}}
     {{ end }}
