--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="foot navigation">
+<footer class="foot">
   {{ partial "social-links-footer.html" . }}
   <div class="copyright"><a href='{{ .Site.BaseURL }}license'>{{ with .Site.Params.license }}{{ . }}{{ else }}Copyright {{ end }}</a>&copy{{ .Site.Copyright }}</div>
 </footer>
