--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,9 +5,9 @@
   <div class="main">
   {{ partial "header.html" . }}
   <article class="post">
-    <h1 class="title start">{{ .Title }}</h1>
-    <div class="content continue">{{ .Content }}</div>
-    <div class="meta end">
+    <h1 class="title">{{ .Title }}</h1>
+    <div class="content">{{ .Content }}</div>
+    <div class="meta">
       {{ if .Params.showthedate }}
         {{ .Date.Format "Jan 2, 2006" }}
       {{ end }}
