Updates to content, layout and syntax
Added previous post and those from previous blog.
Added support for Bigfoot.js.
Added local fonts.

Update logo across everything.
Updated license, about and readme info.
Updated descriptions and keywords for SEO.
Updated GA code.

Removed reliance on Google Fonts.
Removed Netlify CMS support.

Minor syntax cleanup.

--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,7 +1,7 @@
 <article class="post-preview">
   <h2 class="title"> <a href='{{ .Permalink }}'> {{ .Title }}</a> </h2>
-  <div class="summary"> {{ .Summary }} </div>
-  <div class="date">
+  <div class="content"> {{ .Summary }} </div>
+  <div class="meta">
     {{ if .Params.showthedate }}
       {{ .Date.Format "Jan 2, 2006" }}
     {{ end }}
