Layout adjustments and organizational changes
Changed font weights.
Changed “posts” section to “archive”.
Further syntax cleanup.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
   <div class="main">
   {{ partial "header.html" . }}
   <main>
-    {{ $paginator := .Paginate (where .Data.Pages "Type" "post") 10 }}
+    {{ $paginator := .Paginate (where .Data.Pages "Type" "archive") 10 }}
       {{ range $paginator.Pages }}
         {{ .Render "summary" }}
     {{ end }}
