--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,13 +1,8 @@
 <header>
-  <div class="header-bar">
-    <nav class="siteTitle">
-      <div class="brand">
-        <a class="name" href='{{ .Site.BaseURL }}' title="Clever Laziness">Clever Laziness</a>
-      </div>
-      <div class="nav-item">
-        <a class="nav-link" href='{{ .Site.BaseURL }}about' title="About this site">{{ with .Site.Params.about }}{{ . }}{{ else }}About{{ end }}</a>
-        <a class="nav-link" href='{{ .Site.BaseURL }}archive' title="Previous articles">{{ with .Site.Params.archive }}{{ . }}{{ else }}Archive{{ end }}</a>
-      </div>
-    </nav>
-  </div>
+  <a class="name" href='{{ .Site.BaseURL }}' title="Clever Laziness">Clever Laziness</a>
+
+  <nav class="nav-item">
+    <a class="nav-link" href='{{ .Site.BaseURL }}about' title="About this site">{{ with .Site.Params.about }}{{ . }}{{ else }}About{{ end }}</a>
+    <a class="nav-link" href='{{ .Site.BaseURL }}archive' title="Previous articles">{{ with .Site.Params.archive }}{{ . }}{{ else }}Archive{{ end }}</a>
+  </nav>
 </header>
