--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -10,28 +10,20 @@
   --heading-size: 1.75em;
   --body-size: 1rem;
   --meta-size: 15px;
-  --n-weight: 400;
-  --h-weight: 700;
 }
 
 
 /* FONTS */
 @font-face {
   font-family: "Rubik";
-  font-style: normal;
   font-weight: 400;
-  font-display: swap;
   src: local("Rubik"), local("Rubik-Regular"), url(/fonts/Rubik-Regular.woff2) format("woff2");
-  unicode-range: U+0000-00ff, U+0131, U+0152-0153, U+02c6, U+02da, U+02dc, U+2000-206f, U+2074, U+20ac, U+2212, U+2215;
 }
 
 @font-face {
   font-family: "Rubik";
-  font-style: normal;
   font-weight: 700;
-  font-display: swap;
-  src: local("Rubik Bold"), local("Rubik-Bold"), url(/fonts/Rubi-kBold.woff2) format("woff2");
-  unicode-range: U+0000-00ff, U+0131, U+0152-0153, U+02c6, U+02da, U+02dc, U+2000-206f, U+2074, U+20ac, U+2212, U+2215;
+  src: local("Rubik Bold"), local("Rubik-Bold"), url(/fonts/Rubi-Bold.woff2) format("woff2");
 }
 
 
@@ -44,9 +36,6 @@ body {
   margin: 0;
   font-family: 'Rubik', Helvetica, sans-serif;
   color: var(--main-color);
-}
-
-.main {
   display: -ms-grid;
   display: grid;
   grid-template-columns:
@@ -55,12 +44,12 @@ body {
   minmax(1em, 1fr) [full-end];
 }
 
-.main > * {
+body > * {
   grid-column: main;
 }
 
-h2, h3, h4 {
-  font-weight: var(--h-weight);
+h1, h2, h3, h4 {
+  font-weight: 700;
   padding-top: 15px;
 }
 
@@ -84,21 +73,18 @@ a {
 
 
 /* HEADER  */
-.header-bar {
-  font-weight: var(--h-weight);
+header {
+  font-weight: 700;
   text-transform: uppercase;
-  text-align: center;
   padding-bottom: 3rem;
-}
-
-.siteTitle {
   display: -ms-grid;
   display: grid;
-  font-size: var(--title-size);
+  justify-items: center;
 }
 
-.brand {
+.name {
   padding: 1.5rem 0;
+  font-size: var(--title-size);
 }
 
 .name:hover {
@@ -136,7 +122,6 @@ a {
 
 .title {
   font-size: var(--heading-size);
-  font-weight: var(--h-weight);
   text-align: center;
   margin: 0;
   padding: 0;
@@ -212,7 +197,7 @@ a {
 }
 
 .content-item .date {
-  font-size: var(--body-size);
+  font-size: var(--meta-size);
   text-align: center;
   color: var(--meta-color);
 }
