--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -50,7 +50,6 @@ body > * {
 
 h1, h2, h3, h4 {
   font-weight: 700;
-  padding-top: 15px;
 }
 
 a {
@@ -113,6 +112,7 @@ header {
 /* POSTS */
 .post {
   padding-bottom: 2.5rem;
+  min-height: 63vh;
 }
 
 .post-preview {
