Further syntax cleanup

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header>
-  <a class="name" href='{{ .Site.BaseURL }}' title="Clever Laziness">Clever Laziness</a>
+  <a class="brand" href='{{ .Site.BaseURL }}' title="Clever Laziness">Clever Laziness</a>
 
   <nav class="nav-item">
     <a class="nav-link" href='{{ .Site.BaseURL }}about' title="About this site">{{ with .Site.Params.about }}{{ . }}{{ else }}About{{ end }}</a>
