--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,4 +1,4 @@
 <div class="content-item">
-    <a href="{{ .Permalink }}"><div class="post-list"><h3 class="title"> {{ .Title }}</h3></div></a>
-    <div class="date">{{ .Date.Format "Jan 2, 2006" }}</div>
+  <h2 class="title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+  <div class="date">{{ .Date.Format "Jan 2, 2006" }}</div>
 </div>
