--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,16 +5,16 @@
   <div class="main">
   {{ partial "header.html" . }}
   <article class="post">
-    <h1 class="title">{{ .Title }}</h1>
+    <h2 class="title">{{ .Title }}</h2>
     <div class="content">{{ .Content }}</div>
     <div class="meta">
       {{ if .Params.showthedate }}
-        {{ .Date.Format "Jan 2, 2006" }}
+        <div class="date">{{ .Date.Format "Jan 2, 2006" }}</div>
       {{ end }}
       {{ partial "tags.html" . }}
     </div>
   </article>
   {{ partial "footer.html" . }}
-  </div> <!-- main end -->
+  </div>
 </body>
 </html>
