--- a/layouts/partials/tags.html
+++ b/layouts/partials/tags.html
@@ -1,5 +1,3 @@
-<div class="tags">
-  {{ range .Params.tags }}
-    <div class="tag"><a href="/tags/{{ . | urlize }}">#{{.}}</a></div>
-  {{ end }}
-</div>
+{{ range .Params.tags }}
+  <a class="tag" href="/tags/{{ . | urlize }}">#{{.}}</a>
+{{ end }}
