--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
-<html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
 {{ partial "head.html" . }}
-<body>
-  <div class="main">
-  {{ partial "header.html" . }}
-  <article class="post">
-    <h2 class="title">{{ .Title }}</h2>
-    <div class="content">{{ .Content }}</div>
-    <div class="meta">
-      {{ if .Params.showthedate }}
-        <div class="date">{{ .Date.Format "Jan 2, 2006" }}</div>
-      {{ end }}
-      {{ partial "tags.html" . }}
-    </div>
-  </article>
-  {{ partial "footer.html" . }}
+<article class="post">
+  <h2 class="title">{{ .Title }}</h2>
+  <div class="content">{{ .Content }}</div>
+  <div class="meta">
+    {{ if .Params.showthedate }}
+      <div class="date">{{ .Date.Format "Jan 2, 2006" }}</div>
+    {{ end }}
+    {{ range .Params.tags }}
+      <a class="tag" href="/tags/{{ . | urlize }}">#{{.}}</a>
+    {{ end }}
   </div>
-</body>
-</html>
+</article>
+{{ partial "footer.html" . }}
