--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-<html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
 {{ partial "head.html" . }}
-<body>
-  <div class="main">
-  {{ partial "header.html" . }}
-  <main>
-    {{ $paginator := .Paginate (where .Data.Pages "Type" "archive") 10 }}
-      {{ range $paginator.Pages }}
-        {{ .Render "summary" }}
-    {{ end }}
-
-    {{ partial "paginator-menu.html" . }}
-  </main>
-  {{ partial "footer.html" . }}
-  </div> <!-- main end -->
-</body>
-</html>
+<main>
+  {{ $paginator := .Paginate (where .Data.Pages "Type" "archive") 10 }}
+    {{ range $paginator.Pages }}
+      {{ .Render "summary" }}
+  {{ end }}
+  {{ partial "paginator.html" . }}
+</main>
+{{ partial "footer.html" . }}
