Minor language changes

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -28,6 +28,7 @@
   {{ template "_internal/schema.html" . }}
 
   <!-- CSS -->
+  <link rel="stylesheet" href={{ "/css/bigfoot-number.css" | relURL }} />
   <link rel="stylesheet" href={{ "/css/layout.css" | relURL }} />
 
     <!-- jQuery -->
