--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -28,15 +28,8 @@
   {{ template "_internal/schema.html" . }}
 
   <!-- CSS -->
-  <link rel="stylesheet" href={{ "/css/bigfoot-number.css" | relURL }} />
+  <link rel="stylesheet" href={{ "/css/barefoot.min.css" | relURL }} />
   <link rel="stylesheet" href={{ "/css/layout.css" | relURL }} />
-
-    <!-- jQuery -->
-    <script type="text/javascript" src={{ "js/jquery-2.2.1.min.js" | relURL }}></script>
-    <script type="text/javascript" src={{ "js/bigfoot.min.js" | relURL }}></script>
-    <script type="text/javascript">
-      $.bigfoot();
-    </script>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href={{ "./favicon.png" | relURL }}>
