Minor styling changes

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,7 +9,7 @@
   </footer>
 
   <!-- Footnotes -->
-  <script src={{ "js/barefoot.min.js" | relURL }}></script>
+  <script src={{ "js/barefoot.js" | relURL }}></script>
   <script>
     var lf = new BareFoot({
       scope: "article"
