--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -28,7 +28,7 @@
   {{ template "_internal/schema.html" . }}
 
   <!-- CSS -->
-  <link rel="stylesheet" href={{ "/css/barefoot.min.css" | relURL }} />
+  <link rel="stylesheet" href={{ "/css/barefoot.css" | relURL }} />
   <link rel="stylesheet" href={{ "/css/layout.css" | relURL }} />
 
   <!-- Favicon -->
