New layout changes
Chnaged color scheme on whole page
Added footer separator

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,5 @@
+  <div class="separator">• • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • <div>
+
   <footer>
     <a href='{{ .Site.BaseURL }}license'>{{ with .Site.Params.license }}{{ . }}{{ else }}&copy {{ end }} {{ .Site.Copyright }}</a>
     <div class="divider">•</div>
