--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,4 +1,4 @@
 <div class="content-item">
   <h2 class="title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-  <div class="date">{{ .Date.Format "Jan 2, 2006" }}</div>
+  <div class="date">{{ .Date.Format "2006-01-02" }}</div>
 </div>
