--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 <article class="post">
   <h2 class="title">{{ .Title }}</h2>
   {{ if .Params.showthedate }}
-      <div class="date">{{ .Date.Format "Jan 2, 2006" }}</div>
+      <div class="date">{{ .Date.Format "2006-01-02" }}</div>
     {{ end }}
   <div class="content">{{ .Content }}</div>
   {{ range .Params.tags }}
