--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,7 +1,7 @@
 <article class="post-preview">
   <h2 class="title"><a href='{{ .Permalink }}'>{{ .Title }}</a></h2>
   {{ if .Params.showthedate }}
-    <div class="date">{{ .Date.Format "Jan 2, 2006" }}</div>
+    <div class="date">{{ .Date.Format "2006-01-02" }}</div>
   {{ end }}
   <div class="content"> {{ .Summary }} </div>
 </article>
