--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
-  <div class="separator">• • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • • <div>
-
   <footer>
     <a href='{{ .Site.BaseURL }}license'>{{ with .Site.Params.license }}{{ . }}{{ else }}&copy {{ end }} {{ .Site.Copyright }}</a>
+    <div class="divider">•</div>
+    <div>Made with <a href="" class="nav-link">Hugo</a></div>
     <div class="divider">•</div>
     {{with .Site.Params.twitter}}
     <a class="nav-link" href="https://twitter.com/{{.}}" title="Follow me on Twitter">Twitter</a>
